fixed button look on mobile firefox

--- a/html5/style.css
+++ b/html5/style.css
@@ -35,7 +35,7 @@ h4{
     font-size: 100%;
 }
 
-html, body, button, input, textarea, select{
+html, body, .button, input, textarea, select{
     font-family: Georgia, Tahoma, serif;
     background-color: #445;
     color: #aab;
@@ -49,7 +49,7 @@ html, body, button, input, textarea, select{
 }
 #menu>p{width:100%;}
 
-#menu>button{
+#menu>.button{
     width:100%;
 }
 
@@ -62,7 +62,7 @@ aside{
     top:2em;
 }
 
-aside, aside>button{
+aside, aside>.button{
     color: #ffe;
     border-style: solid;
     border-color: #887;
@@ -70,7 +70,7 @@ aside, aside>button{
     margin-left:1em;
 }
 
-button{
+.button{
     margin-right: 1em;
     border:solid 1px #667;
     margin:0;
@@ -79,13 +79,20 @@ button{
     padding:1em;
     min-width:3em;
     text-align:center;
+    text-decoration:none;
+    display:inline-block;
+    cursor:pointer;
 }
 
-button:active{
+.button:hover{   
     background-color:#667;
 }
 
-button.selected{
+.button:active{
+    background-color:#667;
+}
+
+.button.selected{
     background-color:#778;
     color:#ccd;
 }
